--- a/bfx_workshop_01_overview.ipynb
+++ b/bfx_workshop_01_overview.ipynb
@@ -109,7 +109,11 @@
    "source": [
     "### R\n",
     "\n",
-    "TODO: What R installs are required? Can we leverage Jupyter Notebooks and/or conda (some other package manager) to make this easy?"
+    "We will use conda to install the essential R libraries to at minimum create an R Jupyter Notebook.\n",
+    "\n",
+    "```\n",
+    "conda install r-essentials\n",
+    "```"
    ]
   },
   {
