--- a/bfx_workshop_01_overview.ipynb
+++ b/bfx_workshop_01_overview.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unix\n",
+    "## Unix command line familiarity\n",
     "\n",
     "Whether on a macOS or Linux operating system, the Unix family of operating systems all have a similar look and feel. There are standard commands for navigating a filesystem and utilities for performing common tasks on files and directories. This workshop does not specifically cover Unix commands, but a few good resources:\n",
     "\n",
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prerequisite Installs\n",
+    "## Software you'll need to have installed:\n",
     "\n",
     "NOTE: There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The following installs are a minimum list of steps to both load, execute, and edit the Jupyter Notebooks used for sharing material and instructions used throughout this workshop."
    ]
@@ -337,6 +337,15 @@
     "\n",
     "NOTE: The above link is only accessible from within WUSM's network.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  LSF and Docker tutorial\n",
+    "\n",
+    "Working through this [LSF and Docker tutorial)(https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) may prove useful before attempting this week's homework."
+     ]
   },
   {
    "cell_type": "markdown",
