--- a/bfx_workshop_01_overview.ipynb
+++ b/bfx_workshop_01_overview.ipynb
@@ -342,9 +342,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  LSF and Docker tutorial\n",
+    "###  LSF and Docker information\n",
     "\n",
-    "Working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) may prove useful before attempting this week's homework."
+    "Working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful in conjunction with this week's homework."
      ]
   },
   {
