--- a/bfx_workshop_01_overview.ipynb
+++ b/bfx_workshop_01_overview.ipynb
@@ -356,7 +356,8 @@
     "Please attempt the following exercises on your own and post questions to the mgibio #bfx_workshop Slack channel.\n",
     "\n",
     "1. Ensure you can login to compute1 and have access to a storage allocation.\n",
-    "2. Use the RIS Knowledge Base and Tutorials to launch a Docker image on a compute1 node."
+    "2. Use the RIS Knowledge Base and Tutorials to launch a Docker image on a compute1 node.",
+    "3. Drop into the #bfx_workshop slack channel and introduce yourself!"
    ]
   }
  ],
