Add Setup and vt decompose sections

--- a/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
+++ b/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
@@ -21,7 +21,174 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "adding a section about vt decompose?"
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. This VCF can be found in the `week_09` folder of the [bfx-workshop repository](https://github.com/genome/bfx-workshop). Let's create a working directory and download this file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ssiebert/Documents/Work/bfx-workshop/week_09\n",
+      "--2020-11-13 09:43:38--  https://github.com/genome/bfx-workshop/blob/master/week_09/mutect.filtered.vcf.gz?raw=true\n",
+      "Resolving github.com (github.com)... 140.82.112.4\n",
+      "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://github.com/genome/bfx-workshop/raw/master/week_09/mutect.filtered.vcf.gz [following]\n",
+      "--2020-11-13 09:43:38--  https://github.com/genome/bfx-workshop/raw/master/week_09/mutect.filtered.vcf.gz\n",
+      "Reusing existing connection to github.com:443.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/genome/bfx-workshop/master/week_09/mutect.filtered.vcf.gz [following]\n",
+      "--2020-11-13 09:43:38--  https://raw.githubusercontent.com/genome/bfx-workshop/master/week_09/mutect.filtered.vcf.gz\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.184.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.184.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 96958 (95K) [application/octet-stream]\n",
+      "Saving to: ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/mutect.filtered.vcf.gz’\n",
+      "\n",
+      "/Users/ssiebert/Doc 100%[===================>]  94.69K  --.-KB/s    in 0.02s   \n",
+      "\n",
+      "2020-11-13 09:43:39 (3.91 MB/s) - ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/mutect.filtered.vcf.gz’ saved [96958/96958]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo $PWD\n",
+    "!mkdir -p $PWD/bfx_workshop_week_09\n",
+    "!wget https://github.com/genome/bfx-workshop/blob/master/week_09/mutect.filtered.vcf.gz?raw=true -O $PWD/bfx_workshop_week_09/mutect.filtered.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need the reference and tumor bam files used previously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-11-13 09:43:39--  https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga=2.128927176.-570225801.1605281431\n",
+      "Resolving storage.cloud.google.com (storage.cloud.google.com)... 172.217.1.46\n",
+      "Connecting to storage.cloud.google.com (storage.cloud.google.com)|172.217.1.46|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://accounts.google.com/ServiceLogin?service=cds&passive=1209600&continue=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga%3D2.128927176.-570225801.1605281431&followup=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga%3D2.128927176.-570225801.1605281431 [following]\n",
+      "--2020-11-13 09:43:39--  https://accounts.google.com/ServiceLogin?service=cds&passive=1209600&continue=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga%3D2.128927176.-570225801.1605281431&followup=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga%3D2.128927176.-570225801.1605281431\n",
+      "Resolving accounts.google.com (accounts.google.com)... 216.58.192.141\n",
+      "Connecting to accounts.google.com (accounts.google.com)|216.58.192.141|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: unspecified [text/html]\n",
+      "Saving to: ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/hla_and_brca_genes.fa’\n",
+      "\n",
+      "/Users/ssiebert/Doc     [ <=>                ]  61.05K  --.-KB/s    in 0.04s   \n",
+      "\n",
+      "2020-11-13 09:43:39 (1.61 MB/s) - ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/hla_and_brca_genes.fa’ saved [62514]\n",
+      "\n",
+      "--2020-11-13 09:43:39--  https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga=2.60688873.-570225801.1605281431\n",
+      "Resolving storage.cloud.google.com (storage.cloud.google.com)... 172.217.1.46\n",
+      "Connecting to storage.cloud.google.com (storage.cloud.google.com)|172.217.1.46|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://accounts.google.com/ServiceLogin?service=cds&passive=1209600&continue=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga%3D2.60688873.-570225801.1605281431&followup=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga%3D2.60688873.-570225801.1605281431 [following]\n",
+      "--2020-11-13 09:43:39--  https://accounts.google.com/ServiceLogin?service=cds&passive=1209600&continue=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga%3D2.60688873.-570225801.1605281431&followup=https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga%3D2.60688873.-570225801.1605281431\n",
+      "Resolving accounts.google.com (accounts.google.com)... 216.58.192.141\n",
+      "Connecting to accounts.google.com (accounts.google.com)|216.58.192.141|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: unspecified [text/html]\n",
+      "Saving to: ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/hla_and_brca_genes.fa.fai’\n",
+      "\n",
+      "/Users/ssiebert/Doc     [ <=>                ]  60.89K  --.-KB/s    in 0.03s   \n",
+      "\n",
+      "2020-11-13 09:43:40 (1.78 MB/s) - ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/hla_and_brca_genes.fa.fai’ saved [62348]\n",
+      "\n",
+      "--2020-11-13 09:43:40--  https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam\n",
+      "Resolving xfer.genome.wustl.edu (xfer.genome.wustl.edu)... 128.252.233.42\n",
+      "Connecting to xfer.genome.wustl.edu (xfer.genome.wustl.edu)|128.252.233.42|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 128053546 (122M)\n",
+      "Saving to: ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/tumor.bam’\n",
+      "\n",
+      "/Users/ssiebert/Doc 100%[===================>] 122.12M  13.6MB/s    in 9.0s    \n",
+      "\n",
+      "2020-11-13 09:43:49 (13.5 MB/s) - ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/tumor.bam’ saved [128053546/128053546]\n",
+      "\n",
+      "--2020-11-13 09:43:49--  https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam.bai\n",
+      "Resolving xfer.genome.wustl.edu (xfer.genome.wustl.edu)... 128.252.233.42\n",
+      "Connecting to xfer.genome.wustl.edu (xfer.genome.wustl.edu)|128.252.233.42|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2208712 (2.1M)\n",
+      "Saving to: ‘/Users/ssiebert/Documents/Work/bfx-workshop/week_09/bfx_workshop_week_09/tumor.bam.bai’\n",
+      "\n",
+      "week_09/bfx_worksho  54%[=========>          ]   1.15M  14.8KB/s    eta 1m 44s "
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa?_ga=2.128927176.-570225801.1605281431 -O $PWD/bfx_workshop_week_09/hla_and_brca_genes.fa\n",
+    "!wget https://storage.cloud.google.com/analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai?_ga=2.60688873.-570225801.1605281431 -O $PWD/bfx_workshop_week_09/hla_and_brca_genes.fa.fai\n",
+    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam -O $PWD/bfx_workshop_week_09/tumor.bam\n",
+    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam.bai -O $PWD/bfx_workshop_week_09/tumor.bam.bai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting multialleleic sites using vt decompose"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our VCF might contain variants with multiple alt alleles. In these cases the ALT field of the VCF will have multiple alt alleles in it. Take for example this variant:\n",
+    "```\n",
+    "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tExome_Normal\tExome_Tumor\n",
+    "chr17\t3017916\t.\tCGTGT\tC,CGT\t.\tgermline;multiallelic;normal_artifact\tAS_FilterStatus=weak_evidence|SITE;AS_SB_TABLE=31,0|3,0|9,0;DP=48;ECNT=1;GERMQ=1;MBQ=30,30,30;MFRL=0,0,0;MMQ=60,60,60;MPOS=49,31;NALOD=0.710,-7.297e+00;NLOD=2.65,-6.178e+00;POPAF=6.00,6.00;RPA=16,14,15;RU=GT;STR;STRQ=93;TLOD=6.76,12.45\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:9,0,3:0.066,0.271:12:0,0,0:8,0,3:9,0,3,0\t0/1/2:22,3,6:0.117,0.205:31:0,0,0:22,3,6:22,0,9,0\n",
+    "```\n",
+    "This might happen if both chromsomes have a mutation at the same position, but the exact mutation differs between the two chromosomes. It might also happen if there is a subclonal mutation in some tumor cells. It might also just be an artifact.\n",
+    "\n",
+    "It is usually easier to process a VCF if these sort of variants are preprocessed to split up multi-allelic sites since some information is encoded on a per-allele basis (e.g., per-allele depth, per-allele VAF). \n",
+    "\n",
+    "vt decompose is part of the [vt tool package](https://genome.sph.umich.edu/wiki/Vt) and available on quay container at `quay.io/biocontainers/vt:0.57721--hf74b74d_1`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -v $PWD/bfx_workshop_week_09:/data -it quay.io/biocontainers/vt:0.57721--hf74b74d_1 vt decompose /data/mutect.filtered.vcf.gz -s -o /data/mutect.filtered.decomposed.vcf.gz "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After running vt decompose the above variant is split up into two lines and looks like this:\n",
+    "```\n",
+    "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tExome_Normal\tExome_Tumor\n",
+    "chr17\t3017916\t.\tCGTGT\tC\t.\tgermline;multiallelic;normal_artifact\tAS_FilterStatus=weak_evidence|SITE;AS_SB_TABLE=31,0|3,0|9,0;DP=48;ECNT=1;GERMQ=1;MBQ=30,30;MFRL=0,0;MMQ=60,60;MPOS=49;NALOD=0.71;NLOD=2.65;POPAF=6;RPA=16,14;RU=GT;STR;STRQ=93;TLOD=6.76;OLD_MULTIALLELIC=chr17:3017916:CGTGT/C/CGT\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:9,0:0.066:12:0,0:8,0:9,0,3,0\t0/1/.:22,3:0.117:31:0,0:22,3:22,0,9,0\n",
+    "chr17\t3017916\t.\tCGTGT\tCGT\t.\tgermline;multiallelic;normal_artifact\tAS_FilterStatus=weak_evidence|SITE;AS_SB_TABLE=31,0|3,0|9,0;DP=48;ECNT=1;GERMQ=1;MBQ=30,30;MFRL=0,0;MMQ=60,60;MPOS=31;NALOD=-7.297;NLOD=-6.178;POPAF=6;RPA=16,15;RU=GT;STR;STRQ=93;TLOD=12.45;OLD_MULTIALLELIC=chr17:3017916:CGTGT/C/CGT\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:9,3:0.271:12:0,0:8,3:9,0,3,0\t0/./1:22,6:0.205:31:0,0:22,6:22,0,9,0\n",
+    "```"
    ]
   },
   {
@@ -49,25 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[E::hts_open_format] Failed to open file vcf\r\n",
-      "Traceback (most recent call last):\r\n",
-      "  File \"/usr/bin/bam_readcount_helper.py\", line 51, in <module>\r\n",
-      "    vcf_file = VCF(vcf_filename)\r\n",
-      "  File \"cyvcf2/cyvcf2.pyx\", line 195, in cyvcf2.cyvcf2.VCF.__init__\r\n",
-      "    raise IOError(\"Error opening %s\" % fname)\r\n",
-      "IOError: Error opening vcf\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!docker run -v $PWD:/data -it mgibio/bam_readcount_helper-cwl:1.1.1 python /usr/bin/bam_readcount_helper.py vcf sample reference_fasta bam output_file_prefix output_directory"
+    "!docker run -v $PWD/bfx_workshop_week_09:/data -it mgibio/bam_readcount_helper-cwl:1.1.1 python /usr/bin/bam_readcount_helper.py /data/mutect.filtered.decomposed.vcf.gz Exome_Tumor /data/hla_and_brca_genes.fa /data/tumor.bam Exome_Tumor /data"
    ]
   },
   {
@@ -80,26 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\r\n",
-      "  File \"/usr/local/bin/vcf-readcount-annotator\", line 11, in <module>\r\n",
-      "    sys.exit(main())\r\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/vatools/vcf_readcount_annotator.py\", line 190, in main\r\n",
-      "    read_counts = parse_bam_readcount_file(args)\r\n",
-      "  File \"/usr/local/lib/python3.6/dist-packages/vatools/vcf_readcount_annotator.py\", line 54, in parse_bam_readcount_file\r\n",
-      "    with open(args.bam_readcount_file, 'r') as reader:\r\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'bam_readcount_file'\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!docker run -v $PWD:/data -it griffithlab/vatools:4.1.0 vcf-readcount-annotator input_vcf bam_readcount_file DNA"
+    "!docker run -v $PWD:/data -it griffithlab/vatools:4.1.0 vcf-readcount-annotator /data/mutect.filtered.decomposed.vcf.gz bam_readcount_file DNA -s Exome_Tumor"
    ]
   },
   {
@@ -127,18 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: vcfpy in /Users/ssiebert/miniconda2/envs/py37/lib/python3.7/site-packages (0.12.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install vcfpy"
    ]
@@ -152,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,22 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'input.vcf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-7533dfa41b5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvcf_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvcfpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"input.vcf\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda2/envs/py37/lib/python3.7/site-packages/vcfpy/reader.py\u001b[0m in \u001b[0;36mfrom_path\u001b[0;34m(klass, path, tabix_path, record_checks, parsed_samples)\u001b[0m\n\u001b[1;32m     91\u001b[0m                     \u001b[0mtabix_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m  \u001b[0;31m# guessing path failed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m             \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m         return klass.from_stream(\n\u001b[1;32m     95\u001b[0m             \u001b[0mstream\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'input.vcf'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vcf_reader = vcfpy.Reader.from_path(\"input.vcf\")"
    ]
