Add a Homework section

--- a/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
+++ b/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
@@ -571,6 +571,18 @@
     "samtools pysam \n",
     "biotools? biopython for fasta"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework\n",
+    "- Download the normal bams from here: https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/\n",
+    "- Calculate readcounts for the normal sample and add them to the `mutect.filtered.decomposed.pass_vaf_filtered.vcf.gz` file\n",
+    "- Filter the output VCF from the above step to exclude variants where the normal VAF is higher than 0.02\n",
+    "- Amend the TSV-creation script to also output the normal VAF on top of the other information\n",
+    "- Read Chapter 1 of the the [VCF specification document](https://samtools.github.io/hts-specs/VCFv4.2.pdf) to familiarize yourself further with the VCF format. What are the differences between the FILTER, INFO, and FORMAT fields (i.e., when would you use which field)? What are the differences between the different Make a list of additional questions you might have about this format."
+   ]
   }
  ],
  "metadata": {
