More vcf tips and python discussion

--- a/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
+++ b/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
@@ -205,6 +205,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tip\n",
+    "To quickly find sample names in a VCF, try searching the file for `#CHROM`. This is guaranteed to be part of the header, and the names of any samples included in the file will be present at the end of this line. \n",
+    "Normally we would use `grep` to search through a file, but VCF files are often stored `gzip`-compressed to save space. Luckily, `zgrep` is standard alongside grep, and can be used to search compressed files in place, without needing to manually unzip, search, then re-zip. Similar counterparts exist to other standard tools, such as `cat`/`zcat` and `diff`/`zdiff`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zgrep '#CHROM' bfx_workshop_week_09/mutect.filtered.decomposed.vcf.gz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -491,6 +509,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Python Tips\n",
+    "\n",
+    "## REPL\n",
+    "If you're in a hurry, on an unfamiliar machine, or just don't like Jupyter, but want a similar way to quickly try out some code and see results, try out the python REPL!\n",
+    "- This stands for read-eval-print-loop, and functions much like the embedded code snippets in the notebook above, or like REPLs packaged with other languages\n",
+    "- Invoke with `python -i`\n",
+    "- Quit with `exit()`\n",
+    "- Scripts can also be launched interactively with `python -i <script.py>`, and upon exit (whether normally or due to an error), the state is passed to the REPL, and you can run functions from the script, examine variable values, etc\n",
+    "\n",
+    "## Useful bioinformatics packages\n",
+    "- vcfpy\n",
+    "- pysam- samtools wrapper\n",
+    "- pyyaml- work with YAML files (CWL, the language that our managed workflow are written in, is actually YAML)\n",
+    "- pandas & numpy- packages for efficiently working with big data\n",
+    "- biopython- a vast collection of bioinformatics tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Homework\n",
     "- Download the normal bams from here: https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/\n",
     "- Calculate readcounts for the normal sample and add them to the `mutect.filtered.decomposed.pass_vaf_filtered.vcf.gz` file\n",
@@ -515,8 +554,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
