--- a/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
+++ b/week_09/bfx_workshop_09_parsing_filtering_python.ipynb
@@ -4,6 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# BFX Workshop Week 9 - Parsing and Filtering with Python\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. This VCF can be found in the `week_09` folder of the [bfx-workshop repository](https://github.com/genome/bfx-workshop). Let's create a working directory and download this file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo $PWD\n",
+    "!mkdir -p $PWD/bfx_workshop_week_09\n",
+    "!wget https://github.com/genome/bfx-workshop/blob/master/week_09/mutect.filtered.vcf.gz?raw=true -O $PWD/bfx_workshop_week_09/mutect.filtered.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also need the reference and tumor bam files used previously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -v $PWD/bfx_workshop_week_09:/staging mgibio/data_downloader:0.1.0 gsutil -m cp gs://analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa /staging\n",
+    "!docker run -v $PWD/bfx_workshop_week_09:/staging mgibio/data_downloader:0.1.0 gsutil -m cp gs://analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai /staging\n",
+    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam -O $PWD/bfx_workshop_week_09/tumor.bam\n",
+    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam.bai -O $PWD/bfx_workshop_week_09/tumor.bam.bai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to speed up later steps, let's pull the Docker containers we will be using"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker pull mgibio/bam_readcount_helper-cwl:1.1.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Intro to VCF\n",
     "The [Variant Call Format (VCF)](https://samtools.github.io/hts-specs/VCFv4.2.pdf) is a text file format. It contains meta-information header lines and data lines with information about a position in the genome. It can optionally contain genotype information on samples for each position.\n",
     "\n",
@@ -78,50 +135,6 @@
    "metadata": {},
    "source": [
     "# Preprocessing VCF - adding readcounts using bam-readcount and VAtools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. This VCF can be found in the `week_09` folder of the [bfx-workshop repository](https://github.com/genome/bfx-workshop). Let's create a working directory and download this file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!echo $PWD\n",
-    "!mkdir -p $PWD/bfx_workshop_week_09\n",
-    "!wget https://github.com/genome/bfx-workshop/blob/master/week_09/mutect.filtered.vcf.gz?raw=true -O $PWD/bfx_workshop_week_09/mutect.filtered.vcf.gz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will also need the reference and tumor bam files used previously."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker run -v $PWD/bfx_workshop_week_09:/staging mgibio/data_downloader:0.1.0 gsutil -m cp gs://analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa /staging\n",
-    "!docker run -v $PWD/bfx_workshop_week_09:/staging mgibio/data_downloader:0.1.0 gsutil -m cp gs://analysis-workflows-example-data/somatic_inputs/hla_and_brca_genes.fa.fai /staging\n",
-    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam -O $PWD/bfx_workshop_week_09/tumor.bam\n",
-    "!wget https://xfer.genome.wustl.edu/gxfer1/project/cancer-genomics/bfx_workshop/tumor.bam.bai -O $PWD/bfx_workshop_week_09/tumor.bam.bai"
    ]
   },
   {
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install vcfpy pysam"
+    "!pip install vcfpy pysam"
    ]
   },
   {
@@ -259,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,20 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Exome_Normal', 'Exome_Tumor']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vcf_reader.header.samples.names"
    ]
@@ -318,41 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PASS',\n",
-       " 'FAIL',\n",
-       " 'base_qual',\n",
-       " 'clustered_events',\n",
-       " 'contamination',\n",
-       " 'duplicate',\n",
-       " 'fragment',\n",
-       " 'germline',\n",
-       " 'haplotype',\n",
-       " 'low_allele_frac',\n",
-       " 'map_qual',\n",
-       " 'multiallelic',\n",
-       " 'n_ratio',\n",
-       " 'normal_artifact',\n",
-       " 'orientation',\n",
-       " 'panel_of_normals',\n",
-       " 'position',\n",
-       " 'possible_numt',\n",
-       " 'slippage',\n",
-       " 'strand_bias',\n",
-       " 'strict_strand',\n",
-       " 'weak_evidence']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vcf_reader.header.filter_ids()"
    ]
@@ -373,20 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "InfoHeaderLine('INFO', '<ID=DP,Number=1,Type=Integer,Description=\"Approximate read depth; some reads may have been filtered\">', {'ID': 'DP', 'Number': 1, 'Type': 'Integer', 'Description': 'Approximate read depth; some reads may have been filtered'})"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vcf_reader.header.get_info_field_info('DP')"
    ]
@@ -400,18 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['normal_artifact', 'slippage', 'weak_evidence']\n",
-      "{'GT': '0/1', 'AD': [0, 0], 'AF': [0.0], 'DP': 0, 'F1R2': [5, 1], 'F2R1': [62, 4], 'SB': [63, 6, 4, 1]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vcf_reader = vcfpy.Reader.from_path(\"bfx_workshop_week_09/mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz\")\n",
     "for entry in vcf_reader:\n",
@@ -431,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,34 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     792\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!zgrep -v '#' bfx_workshop_week_09/mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz | wc -l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       2\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!zgrep -v '#' bfx_workshop_week_09/mutect.filtered.decomposed.readcount_snvs_indel.pass_vaf_filtered.vcf.gz | wc -l"
    ]
@@ -518,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,22 +480,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CHROM\tPOS\tREF\tALT\tFILTER\tDEPTH\tVAF\r",
-      "\r\n",
-      "chr17\t7675088\tC\tT\tPASS\t41\t1.0\r",
-      "\r\n",
-      "chr17\t43076305\tTTA\tT\tPASS\t17\t0.41176\r",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat bfx_workshop_week_09/mutect.filtered.decomposed.readcount_snvs_indel.pass_vaf_filtered.tsv"
    ]
@@ -581,21 +502,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
